css/style.css
/* ... */
#bestil .indigogo_facts ul li {
  padding: 0 0 0.5rem 0;
}

#bestil .order_image {
  width: 100%;
  margin: -4rem 0 -1rem;
  padding-bottom: 91.07%;
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center center;
  background-image: url(../img/two_kids_web.png);
  align-self: flex-end;
}

/* footer */

footer {
  background-color: var(--theme-black);
  color: var(--theme-medium-gray);
  min-height: 100vh;
  position: relative;
  z-index: 250;
}

footer::before {
  content: "";
  position: absolute;
  height: 82px;
  width: 200vw;
  top: -25px;
  left: 0;
  margin-left: calc(50% - 50vw);
  margin-right: calc(50% - 50vw);
  background-size: 1920px 80px;
  background-repeat: repeat-x;
  background-position: top -50vw;
  background-image: url(../img/rugged_line_blackbar.svg);
  transition: none;
  transform: scaleY(-1) scaleX(-1);
  transform-origin: center center;
}

footer .content {
  display: grid;
  grid-gap: 2rem;
  padding: 3rem 3rem 10rem;
}

footer h3 {
  color: var(--theme-medium-gray);
}

footer .content p,
footer .content h4 {
  padding: 0 3vw 0 0;
}

footer .logo {
  max-width: 12rem;
  margin: 0 0 1rem;
}

.symbol_wrapper {
  display: grid;
  grid-gap: 2rem;
  grid-template-columns: 1fr;
}

footer .some {
  width: 12rem;
  margin: 1rem auto 0 0;
  display: inline-block;
}

footer .share_wrapper {
  display: flex;
  margin: 0.5rem 0 0;
}

footer .share_projekt {
  width: 3rem;
  margin-right: 1rem;
}

footer .support {
  width: 5rem;
}

/*- - - - - - - - - - - - - - - - - - - - - - - - - - media queries mobile landscape- - - - - - - - - - - - - - - - - - - - - - - - - -*/

@media only screen and (max-width: 888px) and (orientation: landscape) {
  #frame_1_fire {
    background-image: url(../img/fire_mobile_landscape.jpg);
  }
}

/*- - - - - - - - - - - - - - - - - - - - - - - - - - media queries 500px- - - - - - - - - - - - - - - - - - - - - - - - - -*/

@media screen and (min-width: 500px) {
  .content {
    padding: 3rem;
  }

  .blackbar {
    padding: 1rem 1rem 1rem 3rem;
  }

  #frame_1_fire .icons {
    bottom: 6vh;
    right: 6vh;
  }

  #koncept_features .poster {
    max-width: 70%;
    margin: 7vw 0 0;
  }

  #koncept_features .arm {
    position: absolute;
    right: -10vw;
    bottom: -50vw;
    max-width: 60%;
    z-index: 200;
  }

  #udvikling_how .development_explainer {
    max-width: 60%;
  }

  footer .content {
    padding: 6vw;
  }

  .symbol_wrapper {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-gap: 3rem;
  }
}

/*- - - - - - - - - - - - - - - - - - - - - - - - - - media queries tablet portrait over 500px- - - - - - - - - - - - - - - - - - - - - - - - - -*/

@media screen and (min-width: 500px) and (portrait: landscape) {
  #frame_1_fire {
    background-image: url(../img/fire_tablet_portrait.jpg);
  }
}

/*- - - - - - - - - - - - - - - - - - - - - - - - - - media queries 600px- - - - - - - - - - - - - - - - - - - - - - - - - -*/

@media screen and (min-width: 600px) {
  footer .content {
    grid-template-columns: 1fr 1fr;
  }

  footer .content p,
  footer .content h3 {
    padding: 0 8vw 0 0;
  }

  .symbol_wrapper {
    grid-column: 2;
    grid-row: 1;
    padding: 1.25rem 0 0;
    grid-template-columns: 1fr;
  }

  #koncept .image_wrapper {
    display: flex;
    justify-content: center;
  }

  #koncept_features .poster {
    max-width: 60%;
  }

  #koncept_features .arm {
    position: absolute;
    right: 0;
    bottom: -30vw;
    max-width: 50%;
    z-index: 200;
  }

  #koncept::after {
    height: 15vh;
  }

  #koncept_try::before {
    height: 15vh;
  }

  #koncept_explainer ul {
    display: block;
  }

  #udvikling #develop_image {
    padding-bottom: 55.5%;
    background-image: url(../img/workstation_tablet.jpg);
  }

  #udvikling_how .develop_background {
    background-image: url(../img/develop_tablet.png);
    width: 75%;
    margin: 0 25% 5% 5%;
  }

  .graffiti {
    background-image: url(../img/graffiti_tablet.jpg);
  }

  #bestil .indiegogo_link,
  #bestil .indigogo_facts {
    max-width: 85%;
  }

  footer .om {
    padding: 0 20vw 0 0;
    grid-column: 1 / span 2;
  }
}
/* ... */

